tests/ui/unexpected-disjunction.stderr
error: unexpected token
 --> tests/ui/unexpected-disjunction.rs:3:12
  |
3 | #[efg(unix + windows)]
  |            ^
