tests/ui/unexpected-disjunction.rs
use efg::efg;

#[efg(unix + windows)]
struct S;

fn main() {}
